--- a/public/admin/posts.html
+++ b/public/admin/posts.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="utf-8">
   <title>Posts &laquo; Admin</title>
@@ -9,8 +10,11 @@
   <link rel="stylesheet" href="../assets/css/admin.css">
   <script src="../assets/vendors/nprogress/nprogress.js"></script>
 </head>
+
 <body>
-  <script>NProgress.start()</script>
+  <script>
+    NProgress.start()
+  </script>
 
   <div class="main">
     <nav class="navbar">
@@ -29,8 +33,8 @@
         <!-- show when multiple checked -->
         <a class="btn btn-danger btn-sm" href="javascript:;" style="display: none">批量删除</a>
         <form class="form-inline">
-          <select name="" class="form-control input-sm">
-            <option value="">所有分类</option>
+          <select name="" class="form-control input-sm" id="categorieSelect">
+
           </select>
           <select name="" class="form-control input-sm">
             <option value="">所有状态</option>
@@ -59,7 +63,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <!-- <tr>
             <td>随便一个名称</td>
             <td>小小</td>
             <td>潮科技</td>
@@ -91,7 +95,7 @@
               <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
               <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
             </td>
-          </tr>
+          </tr> -->
         </tbody>
       </table>
     </div>
@@ -136,6 +140,39 @@
 
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
-  <script>NProgress.done()</script>
+  <script src="../assets/vendors/art-template/template-web.js"></script>
+  <script src="../assets/js/posts.js"></script>
+
+  <!-- 文章展示模板 -->
+  <script type="text/html" id="articleTpl">
+    {{each records}}
+    <tr>
+      <td>{{$value.title}}</td>
+      <td>{{$value.author.nickName}}</td>
+      <td>{{$value.category.title}}</td>
+      <td class="text-center">{{$imports.formateDate($value.createAt)}}</td>
+      <td class="text-center">{{$value.state==0?'草稿':'已发布'}}</td>
+      <td class="text-center">
+        <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
+        <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+      </td>
+    </tr>
+    {{/each}}
+  </script>
+
+  <!-- 所有分类模板 -->
+  <script type="text/html" id="categoriesTpl">
+    <option value="">所有分类</option>
+
+    {{each}}
+    <option value="">{{$value.title}}</option>
+    {{/each}}
+  </script>
+
+
+  <script>
+    NProgress.done()
+  </script>
 </body>
+
 </html>
