--- a/public/admin/users.html
+++ b/public/admin/users.html
@@ -86,7 +86,7 @@
           <table class="table table-striped table-bordered table-hover">
             <thead>
                <tr>
-                <th class="text-center" width="40"><input type="checkbox"></th>
+                <th class="text-center" width="40"><input type="checkbox" id="selectAll"></th>
                 <th class="text-center" width="80">头像</th>
                 <th>邮箱</th>
                 <th>昵称</th>
@@ -180,7 +180,7 @@
   <script type="text/html" id="userTpl">
     {{each list}}
     <tr>
-        <td class="text-center"><input type="checkbox"></td>
+        <td class="text-center"><input type="checkbox" data-id="{{@$value._id}}"></td>
         <td class="text-center"><img class="avatar" src="{{$value.avatar}}"></td>
         <td>{{$value.email}}</td>
         <td>{{$value.nickName}}</td>
@@ -188,7 +188,7 @@
         <td>{{$value.role=='admin'?'管理员':'普通用户'}}</td>
         <td class="text-center" data-id="{{@$value._id}}">
           <a href="javascript:;" class="btn btn-default btn-xs edit">编辑</a>
-          <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+          <a href="javascript:;" class="btn btn-danger btn-xs delete">删除</a>
         </td>
       </tr>
     {{/each}}
