--- a/public/admin/posts.html
+++ b/public/admin/posts.html
@@ -32,24 +32,25 @@
       <div class="page-action">
         <!-- show when multiple checked -->
         <a class="btn btn-danger btn-sm" href="javascript:;" style="display: none">批量删除</a>
-        <form class="form-inline">
-          <select name="" class="form-control input-sm" id="categorieSelect">
+
+        <form class="form-inline" id="filterForm">
+          <select name="category" class="form-control input-sm" id="categorieSelect">
+            <option>所有分类</option>
 
           </select>
-          <select name="" class="form-control input-sm">
-            <option value="">所有状态</option>
-            <option value="">草稿</option>
-            <option value="">已发布</option>
+          <select name="state" class="form-control input-sm">
+            <option>所有状态</option>
+            <option value="0">草稿</option>
+            <option value="1">已发布</option>
           </select>
-          <button class="btn btn-default btn-sm">筛选</button>
+          <button class="btn btn-default btn-sm" id="selectItem" type="button">筛选</button>
         </form>
+        <!-- 分页 -->
         <ul class="pagination pagination-sm pull-right">
-          <li><a href="#">上一页</a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">下一页</a></li>
+          
         </ul>
+
+
       </div>
       <table class="table table-striped table-bordered table-hover">
         <thead>
@@ -145,28 +146,45 @@
 
   <!-- 文章展示模板 -->
   <script type="text/html" id="articleTpl">
-    {{each records}}
+    {{each data}}
     <tr>
       <td>{{$value.title}}</td>
       <td>{{$value.author.nickName}}</td>
       <td>{{$value.category.title}}</td>
       <td class="text-center">{{$imports.formateDate($value.createAt)}}</td>
       <td class="text-center">{{$value.state==0?'草稿':'已发布'}}</td>
-      <td class="text-center">
-        <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
-        <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+      <td class="text-center" data-id="{{@$value._id}}">
+        <a href="/admin/post-add.html?id={{@$value._id}}" class="btn btn-default btn-xs" id="edit">编辑</a>
+        <a href="javascript:;" class="btn btn-danger btn-xs" id="del">删除</a>
       </td>
     </tr>
     {{/each}}
   </script>
 
+
+
+
+
   <!-- 所有分类模板 -->
   <script type="text/html" id="categoriesTpl">
     <option value="">所有分类</option>
 
-    {{each}}
-    <option value="">{{$value.title}}</option>
+    {{each list}}
+    <option value="{{@$value._id}}">{{$value.title}}</option>
     {{/each}}
+  </script>
+
+  <!-- 分页模板 -->
+  <script type="text/html" id="pagenationTpl">
+    {{if page>1}}
+    <li><a href="javascript:;" onclick="changePage({{page-1}})">上一页</a></li>
+    {{/if}}
+    {{each display}}
+    <li><a href="javascript:;" onclick="changePage({{$value}})">{{$value}}</a></li>
+    {{/each}}
+    {{if page!=pages}}
+    <li><a href="javascript:;" onclick="changePage({{page+1}})">下一页</a></li>
+    {{/if}}
   </script>
 
 
