--- a/public/admin/slides.html
+++ b/public/admin/slides.html
@@ -125,7 +125,7 @@
       <td>{{$value.title}}</td>
       <td>{{@$value.link}}</td>
       <td class="text-center">
-        <a href="javascript:;" class="btn btn-danger btn-xs" data-id="{{@$value.link}}" id="del">删除</a>
+        <a href="javascript:;" class="btn btn-danger btn-xs" data-id="{{@$value._id}}" id="del">删除</a>
       </td>
     </tr>
     {{/each}}
